fix: navbar overflowing (#54)
* fixed navbar

* fixed navbar

* fixed navbar

* fixed navbar

* navbar overflow fixed

---------

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body:has(.mobile-navbar) {
+    overflow: hidden;
+}
